[package]
name = "basic"
version = "0.1.0"
authors = ["YUXIN"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
json = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"

[[bin]]
name = "basic"
path = "main.rs"
