[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["YUXIN <yusun@akamai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib] — tells Rust to build a cdylib version of our package; 
[lib]
crate-type = ["cdylib"]

# The last section is the [dependencies] section. Here's where we tell Cargo what version of wasm-bindgen we want to depend on; in this case, that's any 0.2.z version (but not 0.3.0 or above).
[dependencies]
wasm-bindgen = "0.2"
